--- a/workshop/exercise-2/exercise-2-1/index.html
+++ b/workshop/exercise-2/exercise-2-1/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>Exercise 2</title>
+    <link href='../assets/styles.css' rel="stylesheet">
   </head>
   <body>
     <main>
       <h1>The Great Frog Race</h1>
       <ol id="track" class="track"></ol>
     </main>
+    <script src="../assets/frogStable.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
